<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_ConfirmDlg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title_font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".5"/>

    <TextView
        android:id="@+id/tvReminder_ConfirmDlg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_confirm_passcode"
        android:textSize="@dimen/title_font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".25"/>


    <EditText
        android:id="@+id/etPasscode_ConfirmDlg"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:maxLength="32"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".75"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1.25">

        <Button
            android:id="@+id/btn_cancel_ConfirmDlg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_ultra"
            android:paddingRight="@dimen/padding_ultra"
            android:text="@string/button_cancel"
            android:textSize="@dimen/button_font_size"
            android:layout_toLeftOf="@+id/btn_done_ConfirmDlg" />

        <Button
            android:id="@+id/btn_done_ConfirmDlg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_ultra"
            android:paddingRight="@dimen/padding_ultra"
            android:text="@string/button_confirm"
            android:textSize="@dimen/button_font_size"
            android:layout_alignParentRight="true" />



    </RelativeLayout>

</LinearLayout>
